# audio-llama

./: .gitignore  README.md  audio_instruction_examples.json  audio_instruction_examples.txt  audio_instruction_examples_stats.txt  config.yaml  convert-lora-to-peft.py  dataloaders.py  dataset.py  download_librispeech.py  eval.py  examine_weights.py  generator.py  inference.py  librispeech_metadata.json  librispeech_processor5.py  librispeech_test_clean_metadata.json  main.py  min-example.py  model_args.json  pyproject.toml  remote.md  requirements.txt  sample_lora_layer.json  train.py  train.sh  upload-peft-to-hf.py  upload_checkpoint.py
librispeech_data/: audio_instruction_examples.json  audio_instruction_examples.txt  audio_instruction_examples_stats.txt  librispeech_metadata.json
models/: allm.py  base.py  lora.py  projector.py
src/: dataloaders.py  dataset.py  download_huggingface.py  download_librispeech.py  example.py  get_librispeech.py  huggingface_dataset.py  inference.py  librispeech_processor7.py  run_librispeech.py  run_train.sh  train.py
src/librispeech_data/: audio_instruction_examples.json  audio_instruction_examples.txt  audio_instruction_examples_stats.txt
src/models/: allm.py  projector.py
tests/: run_tests.py  test_allm.py  test_allm_additional.py  test_dataloaders.py  test_dataset.py  test_integration.py
utils/: examine_model.py  extract-lora-params.py  extract_weights.py
